--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .DS_Store
-node_modules
-dist
-.vscode
-.editorconfig
+/.editorconfig
+/.eslintrc.json
+/.nyc_output
+/.vscode
+/coverage
+/dist
+/node_modules
