--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "@dword-design/prepend-data-to-vnodes",
   "version": "1.0.1",
-  "bugs": {
-    "url": "https://github.com/dword-design/prepend-data-to-vnodes/issues"
-  },
+  "description": "",
   "repository": "dword-design/prepend-data-to-vnodes",
   "license": "MIT",
   "author": "Sebastian Landwehr <info@dword-design.de>",
@@ -22,10 +20,5 @@
   },
   "devDependencies": {
     "@dword-design/base": "^4.0.0"
-  },
-  "contributors": [
-    "Renovate Bot (http://renovatebot.com)",
-    "dword-design (http://www.dword-design.de)"
-  ],
-  "maintainers": []
+  }
 }
