--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   ],
   "scripts": {
     "commit": "base commit",
-    "depgraph": "base depgraph",
+    "dev": "base dev",
+    "lint": "base lint",
     "prepare": "base prepare",
     "prepublishOnly": "base prepublishOnly",
-    "release": "base release",
     "test": "base test"
   },
   "dependencies": {
@@ -23,5 +23,8 @@
   },
   "devDependencies": {
     "@dword-design/base": "^6.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
